@@ -166,6 +166,9 @@ Deprecated Functionality
 
 - ``internal_func()`` is deprecated, use ``zeek::lookup_func()``.
 
+- ``opt_internal_val()`` is deprecated, use ``lookup_ID()`` or
+  ``zeek::lookup_val()``.
+
 Zeek 3.1.0
 ==========
 
